Feat/thumbnail 추가 (#12)
* thumbnail&주소입력 추가

* Delete ilovecoffee-react-complete/.idea directory

* Create README.md

* feat/Readme 추가

* fix: 로그 설정 및 예외 처리 수정