@@ -9,31 +9,48 @@ public record ErrorResponse(
         int status,
         String code,
         String message,
+        String api,
+        String location,
         LocalDateTime time
 ) {
+
     @Override
     public String toString() {
-        return toFormat();
-    }
+        return """
+            ```
+            🚨 ERROR
 
-    private String toFormat() {
-        return String.format(
-                "\n%-10s: %s%n" + "%-10s: %s%n" + "%-10s: %s",
-                "errorcode", code,
-                "message", message,
-                "timestamp", time.format(DateformatConstant.DATE_FORMATTER)
+            Status    : %d
+            Code      : %s
+            Message   : %s
+            API       : %s
+            Location  : %s
+            Timestamp : %s
+            ```
+            """.formatted(
+                status,
+                code,
+                message,
+                api,
+                location,
+                time.format(DateformatConstant.DATE_FORMATTER)
         );
     }
+
     public static ErrorResponse of(
             int status,
             String code,
             String message,
+            String api,
+            String location,
             LocalDateTime time
     ) {
         return ErrorResponse.builder()
                 .status(status)
                 .code(code)
                 .message(message)
+                .api(api)
+                .location(location)
                 .time(time)
                 .build();
     }
